--- a/homepage/index.html
+++ b/homepage/index.html
@@ -8,24 +8,68 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style.css">
+        <title>Blender Homepage</title>
     </head>
     <body>
         <header>
-            <a class="logo" href="./index.html"><img src="./images/big-logo.png" alt="Logo"></a>
+            <div class="logo" alt="Homepage link">
+                <a href="./index.html"></a>
+            </div>
             <nav>
-                <ul>
-                    <li><a href="">Download</a></li>
-                    <li><a href="">Download</a></li>
-                </ul>
+                <a href="">Download</a>
+                <a href="">Download</a>
             </nav>
             <!-- Will add a searchbar -->
         </header>
         <main>
             <section id="carousel">
-
+                <section id="image-wheel">
+                    <img id="current-image" src="./images/carousel/2021.jpeg" alt="Sprite Fright Blender Shortfilm">
+                    <img id="after-image" src="./images/carousel/2020.jpeg" alt="">
+                    <!-- <img id="previous-image" src="./images/carousel/2010.jpeg" alt=""> -->
+                </section>
+                <div id="carousel-buttons">
+                    <button class="start">&laquo;</button>
+                    <button class="back">&lsaquo;</button>
+                    <button class="forward">&rsaquo;</button>
+                    <button class="end">&raquo;</button>
+                </div>
             </section>
             <section id="grid">
-                
+                <section class="title">
+                    <h1>Blender Features</h1>
+                </section>
+                <!-- Left Column -->
+                <div class="feature  L-one">
+
+                </div>
+                <div class="feature L-two">
+
+                </div>
+                <div class="feature L-three">
+
+                </div>
+                <!-- Middle column -->
+            
+                <div class="feature  M-one">
+
+                </div>
+                <div class="feature M-two">
+
+                </div>
+                <div class="feature M-three">
+
+                </div>
+                <!-- Right column -->
+                <div class="feature  R-one">
+
+                </div>
+                <div class="feature R-two">
+
+                </div>
+                <div class="feature R-three">
+
+                </div>
             </section>
         </main>
         <footer>
