Updating index.html
Adding a footer.

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -96,7 +96,7 @@
             <section></section>
         </main>
         <footer>
-            <!-- insert email, phone number, address, blender inc, etc. -->
+            <p>The Freedom to Create. Only With Blender 3D.</p>
         </footer>
     </body>
 </html>
